--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,25 @@
 *{
     margin: 0px;
     padding: 0px;
-    font-size: 24px;
+}
+
+body{
+    height: 100%;
+    width: 100%;
+}
+
+header{
+    width: 100%;
+    text-align: end;
+}
+
+nav ul{
+    text-decoration: none;
+}
+
+nav ul li{
+    list-style: none;
+    display: inline;
+    
 }
 
