--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,11 @@
     padding: 0px;
 }
 
+@font-face {
+    font-family: "Roboto";
+    src: url("../assets/fonts/Roboto/Roboto-Black.ttf");
+  }
+
 body{
     height: 100vh;
     width: 100vw;
@@ -10,7 +15,6 @@ body{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    /* position: relative; */
 }
 
 a{
@@ -56,6 +60,10 @@ nav{
     width: 100%;
 }
 
+nav ul li a img{
+    width: 220px;
+}
+
 nav ul{
     text-decoration: none;
     width: 90%;
@@ -73,11 +81,6 @@ nav ul li{
 
 main{
     color: white;
-    /* position: fixed;
-    right: 0px;
-    top: 0px;
-    bottom: 0px;
-    left: 0px; */
     position: absolute;
     top: 0px;
     right: 0px;
@@ -86,4 +89,9 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+main ,contend p{
+    font-family: "Roboto", black;
+    font-size: xx-large;
 }
