--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@
     src: url("../assets/fonts/Roboto/Roboto-Black.ttf");
   }
 
+/* ---------------------------------------------------------------body */  
 body{
     height: 100vh;
     width: 100vw;
@@ -18,6 +19,8 @@ body{
 }
 
 a{
+    font-family: "Roboto", black;
+    font-size: 30px;
     text-decoration: none;
     color: white;
     font-size: xx-large;
@@ -27,8 +30,6 @@ a{
 header{
     width: 100%;
     text-align: end;
-    position: fixed;
-    z-index: 1;
 }
 
 /* -----------------------------------------------------nav social media */
@@ -80,18 +81,41 @@ nav ul li{
 /* ------------------------------------------------------------------main */
 
 main{
-    color: white;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4,1fr);
+    position: fixed;
+    top: 20%;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
 
-main ,contend p{
+main .contend {
+    grid-column: 2 / span 2;
+    grid-row: 2 / span 2;
+    text-align: center;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+}
+
+
+main .contend p{
     font-family: "Roboto", black;
-    font-size: xx-large;
+    font-size: 50px;
+    color: white;
+    grid-row: 1 / span 1;
+}
+
+main .contend button{
+    font-family: "Roboto", black;
+    font-weight: bold;
+    font-size: large;
+    border-width: 1px;
+    border-color: white;
+    background-color: #49ceab;
+    width: 200px;
+    height: 40px;
+    grid-row: 2 / span 1;
+    margin: auto;
 }
