--- a/css/index.css
+++ b/css/index.css
@@ -78,9 +78,9 @@ nav ul li{
     list-style: none;
 }
 
-/* ------------------------------------------------------------------main */
+/* ------------------------------------------------------------------.container */
 
-main{
+.contendIndex{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4,1fr);
@@ -91,7 +91,7 @@ main{
     left: 0;
 }
 
-main .contend {
+.contendIndex .contend {
     grid-column: 2 / span 2;
     grid-row: 2 / span 2;
     text-align: center;
@@ -100,14 +100,14 @@ main .contend {
 }
 
 
-main .contend p{
+.contendIndex .contend p{
     font-family: "Roboto", black;
     font-size: 50px;
     color: white;
     grid-row: 1 / span 1;
 }
 
-main .contend button{
+.contendIndex .contend button{
     font-family: "Roboto", black;
     font-weight: bold;
     font-size: large;
@@ -118,4 +118,9 @@ main .contend button{
     height: 40px;
     grid-row: 2 / span 1;
     margin: auto;
+}
+
+.contendIndex .contend button a{
+    text-decoration: none;
+    color: black;
 }
