--- a/css/blogs.css
+++ b/css/blogs.css
@@ -6,11 +6,14 @@ a{
     color: black;
 }
 
+/* -------------------------------------------------------------------------------main */
 .contendBlog{
     width: 100vw;
     display: grid;
     grid-template-rows: repeat(2, auto);
 }
+
+/* -------------------------------------------------------------------------contendBlog */
 
 .contendBlog .contendTop{
     background-color: #e5e8ec;
@@ -21,6 +24,7 @@ a{
     grid-template-columns: repeat(3, auto);
     width: 80vw;
     margin: 0 auto;
+    padding: 0px 0 60px 0px;
 }
 
 .contendBlog .contendTop .postionContendTop .contendTopTitleImage{
@@ -37,11 +41,11 @@ a{
 .contendBlog .contendTop .postionContendTop .contendTopTitleImage img{
     grid-row: 2;
     width: 90%;
-    padding: 0px 0px 10px 0px;
 }
 
 .contendBlog .contendTop .postionContendTop .contendTopDescription{
     grid-column: 3 / span 1;
+    margin: auto;
 }
 
 .contendBlog .contendTop .postionContendTop .contendTopDescription h1{
@@ -51,53 +55,43 @@ a{
 .contendBlog .contendTop .postionContendTop .contendTopDescription p{
     font-size: 15px;
     margin-bottom: 15px;
+    margin-top: 15px;
 }
 
 .contendBlog .contendTop .postionContendTop .contendTopDescription a{
     font-size: 15px;
     border: 1px solid black;
-    border-radius: 3px;
-    
+    border-radius: 5px;
+    padding: 10px 20px;
+    display: inline-block;
+    margin-top: 15px;
 }
 
 /* ------------------------------------------------------------------------posts */
-
-.contendBlog .posts {
+.contendBlog .posts{
     width: 80vw;
     margin: 0 auto;
-    padding-top: 50px;
-    text-align: center;
 }
 
 .contendBlog .posts h1{
-    margin-bottom: 50px;
+    margin-top: 50px;
+    text-align: center;
 }
-
 
 .contendBlog .posts hr{
-    margin-bottom: 50px;
+    margin-top: 50px;
+    margin-bottom: 25px;
 }
 
-.contendBlog .posts .articles {
-    margin: 10px 0px 10px 0px;
+.contendBlog .posts .articles{
     display: grid;
-    grid-template-columns: repeat(3, auto);
-    grid-template-rows: repeat(3, auto);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3,1fr);
+    gap: 5px;
 }
+ 
+.contendBlog .posts article{
+   border: solid 0.1px black;
+} 
 
-.contendBlog .posts article {
-    font-size: 15px;
-    border: 1px solid black;
-    border-radius: 3px;
-    text-align: left;
-}
 
-.contendBlog .posts article h1{
-    margin: 0pc;
-}
-
-.contendBlog .posts .articles article a{
-    font-size: 15px;
-    border: 1px solid black;
-    border-radius: 3px;
-}
