--- a/css/blogs.css
+++ b/css/blogs.css
@@ -83,15 +83,33 @@ a{
     margin-bottom: 25px;
 }
 
+/* -----------------------------------------------------------------------articles */
+
 .contendBlog .posts .articles{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3,1fr);
-    gap: 5px;
+    row-gap: 20px;
+    justify-items: center;
 }
  
-.contendBlog .posts article{
+.contendBlog .posts .postUno{
    border: solid 0.1px black;
+   border-radius: 10px;
+   width: 80%;
+   text-align: center;
 } 
 
+.contendBlog .posts .postUno img{
+    width: 80%;
+    margin: 10px 0px;
+ } 
 
+ .contendBlog .posts .postUno h3{
+    margin: 10px 0px;
+ } 
+ 
+ .contendBlog .posts .postUno p{
+    margin: 10px 0px;
+    text-align: left;
+    margin: 0px 10px 10px 10px;
+ } 
