--- a/css/blogs.css
+++ b/css/blogs.css
@@ -1,5 +1,7 @@
 body{
+    /* width: 99vw; */
     background-image: none;
+    width: initial;
 }
 
 a{
@@ -8,7 +10,6 @@ a{
 
 /* -------------------------------------------------------------------------------main */
 .contendBlog{
-    width: 100vw;
     display: grid;
     grid-template-rows: repeat(2, auto);
 }
@@ -60,7 +61,7 @@ a{
 
 .contendBlog .contendTop .postionContendTop .contendTopDescription a{
     font-size: 15px;
-    border: 1px solid black;
+    border: 2px solid #64d5b8;
     border-radius: 5px;
     padding: 10px 20px;
     display: inline-block;
@@ -69,7 +70,7 @@ a{
 
 /* ------------------------------------------------------------------------posts */
 .contendBlog .posts{
-    width: 80vw;
+    width: 80%;
     margin: 0 auto;
 }
 
@@ -92,24 +93,39 @@ a{
     justify-items: center;
 }
  
-.contendBlog .posts .postUno{
-   border: solid 0.1px black;
-   border-radius: 10px;
+.contendBlog .posts .articles .postUno{
    width: 80%;
-   text-align: center;
 } 
 
-.contendBlog .posts .postUno img{
-    width: 80%;
+.contendBlog .posts .articles .postUno img{
+    width: 100%;
     margin: 10px 0px;
  } 
 
- .contendBlog .posts .postUno h3{
+ .contendBlog .posts .articles .postUno h3{
     margin: 10px 0px;
  } 
  
- .contendBlog .posts .postUno p{
+ .contendBlog .posts .articles .postUno p{
     margin: 10px 0px;
     text-align: left;
-    margin: 0px 10px 10px 10px;
+    margin: 0px 10px 10px 0px;
  } 
+
+  .contendBlog .posts .articles .postUno a{
+    font-size: 15px;
+    border: 2px solid #64d5b8;
+    padding: 10px 20px;
+    display: inline-block;
+}
+
+/* -----------------------------------------------------------------------------footer */
+
+footer{
+    background-color: #282c31;
+    color: white;
+    text-align: center;
+    padding: 40px 0px;
+    margin-top: 80px;
+    border-top: 40px solid #64d5b8;
+}
