--- a/css/blog.css
+++ b/css/blog.css
@@ -1,8 +1,88 @@
-*{
-    margin: 0px;
-    padding: 0px;
-}
-
 body{
     background-image: none;
+}
+
+/* -----------------------------------------------------------------main */
+main{
+    width: 95%;
+    margin: 0 auto;
+}
+
+main .imagePost{
+    width: 90%;
+    margin: 0 auto;
+}
+
+main .imagePost img{
+    width: 100%;
+}
+
+main .postDescription{
+    width: 60%;
+    margin: 40px auto 40px auto;
+}
+
+main .postDescription h1{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-size: 48px;
+}
+
+main .postDescription p{
+    text-align: justify;
+    margin-bottom: 24px;
+}
+/* -------------------------------------------------------sesction-contac */
+.contac{
+    width: 100%;
+    background-color: #e5e8ec;
+    display: flex;
+    justify-content: space-between;
+    padding: 50px 0px;
+}
+
+.contac .contacMe, .opinion{
+    background-color: #e5e8ec;
+    width: 39%;
+}
+
+.contac .contacMe, .opinion {
+    display: flex;
+    justify-content: space-around;
+}
+
+.contac .opinion .logoOpinion{
+    width: 50%;
+    text-align: left;
+}
+.contac .contacMe .logoContacMe{
+    width: 50%;
+    text-align: right;
+}
+
+.contac .contacMe .descriptionContacMe,
+.contac .opinion .descriptionContacMe{
+    margin: auto auto 0px 20px;
+    
+}
+
+.contac .contacMe .descriptionContacMe a,
+.contac .opinion .descriptionContacMe a{
+    text-decoration: underline;
+    font-size: 24px;
+}
+
+.contac .contacMe .descriptionContacMe p,
+.contac .opinion .descriptionContacMe p{
+    margin-top: 12px;
+}
+
+.contac .contacMe img,
+.contac .opinion  img{
+    width: inherit;
+}
+
+/* ---------------------------------------------------------------footer */
+footer{
+    margin-top: 0px;
 }
